# latticeTN

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  REPO_STATUS.md  ROADMAP.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  requirements.txt  run_latticetn_n80_ad_two_site.py  run_latticetn_n80_no_ed.py  run_latticetn_n80_no_ed_product.py  run_latticetn_n80_no_ed_robust.py  run_latticetn_n80_no_ed_safe.py  standalone_stage12a_gauge_retraction_test.py
.claude/: loop.md  settings.json
codex_handoff_latticetn/: AGENTS_AD_BENCHMARK_APPEND.md  CODEX_GOAL_AD_BENCHMARK.md  CODEX_HANDOFF.md
docs/: AD_GAUGE_PROTOCOL.md  AD_GAUGE_REPORT.md  AD_GAUGE_SPEC.md  AD_GPU_BENCHMARK_PROTOCOL.md  AD_GPU_BENCHMARK_REPORT.md  AD_GPU_BENCHMARK_SPEC.md  AD_LOCAL_OPT_PROTOCOL.md  AD_LOCAL_OPT_REPORT.md  AD_LOCAL_OPT_SPEC.md  AD_MAINLINE_AUDIT.md  AD_MAINLINE_POLICY.md  AD_TWO_SITE_PROTOCOL.md  AD_TWO_SITE_REPORT.md  AD_TWO_SITE_SPEC.md  AD_VARIATIONAL_PROTOCOL.md  AD_VARIATIONAL_REPORT.md  AD_VARIATIONAL_SPEC.md  API_OVERVIEW.md  AUTOMATION_EXECUTION_PLAN.md  BENCHMARK_PROTOCOL.md  BENCHMARK_REPORT.md  BENCHMARK_SPEC.md  CANONICALIZATION_PROTOCOL.md  CANONICALIZATION_REPORT.md  CANONICALIZATION_SPEC.md  CLAUDE_AUTONOMOUS_PROMPT.md  CLAUDE_BENCHMARK_PROMPT.md  CLAUDE_PROGRESS.md  CLAUDE_PROGRESS_AD_GAUGE.md  CLAUDE_PROGRESS_AD_GPU_BENCHMARK.md  CLAUDE_PROGRESS_AD_LOCAL_OPT.md  CLAUDE_PROGRESS_AD_MAINLINE_AUDIT.md  CLAUDE_PROGRESS_AD_TWO_SITE.md  CLAUDE_PROGRESS_AD_VARIATIONAL.md  CLAUDE_PROGRESS_BENCHMARK.md  CLAUDE_PROGRESS_CANONICAL.md  (+48 more)
(+412 files in other folders)
