[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latticetn"
version = "0.1.0"
description = "Automatic-differentiation tensor-network library: MPS/MPO with PyTorch autograd, validated on the 1D Heisenberg chain."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "latticeTN contributors" }]
keywords = ["tensor-network", "automatic-differentiation", "mps", "mpo", "pytorch", "heisenberg"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "tqdm>=4.65",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-timeout>=2.2",
]

[tool.setuptools]
packages = ["latticetn"]

[tool.pytest.ini_options]
# Mirror pytest.ini so `pip install -e .` installs also scope collection to tests/.
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
